force-app/main/default/objects/Audit_Product__c/Audit_Product__c.object-meta.xml
<CustomObject>
    <label>Audit Product</label>
    <nameField>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>