force-app/main/default/objects/Audit_Product__c/fields/Critical_Component_Service__c.field-meta.xml
<CustomField>
    <fullName>Critical_Component_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Component(s)/Service(s)</label>
    <type>Checkbox</type>
</CustomField>