force-app/main/default/objects/Audit_Product__c/fields/Manufacturing_Status__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Status__c</fullName>
    <label>Manufacturing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>